--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -8,6 +8,13 @@ header {width: 100%; margin: 0 auto; background: linear-gradient(to top, #353535
 #top-header h1 {font-size: 1.5em; color: #fab357; font-weight: bold; margin-bottom: 5px; text-shadow: 1px 1px 2px #222}
 #top-header p {font-size: 0.9em; color: #fab357; float: right; font-weight: bold; width: 200px; text-align: right; line-height: 15px}
 
+	/*PANNEL*/
+	#panel {float:right; text-align:right}
+	#panel h1 {font-size:1em; color:#DDD; margin-bottom:10px; display:block}
+	#panel a {background:#AAA; display:inline-block; text-decoration:none; font-size:.9em; padding:5px; color:#FFF; border-radius:4px}
+	#panel a:hover {background:#888}
+	/*END PANEL*/
+
 	/*MENU*/
 	nav {width: 100%; background: #595959; overflow: auto; border-top: solid 2px #444; margin-bottom: 1.5%}
 	nav ul {width: 70%; margin: 0 auto}
