Ajuste na GRID de usuários

--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -75,11 +75,11 @@ header {width: 100%; margin: 0 auto; background: linear-gradient(to top, #353535
 
     /*USERS LIST*/
     #user-list {margin:2% auto;}
-    #user-list ul li {width:30%; float:left; margin:1% 1% 1% 0;}
-    #user-list .display-user {border:solid 1px #CCC; float:left; width:100%}
+    #user-list ul li {width:30%; float:left; margin:1% 1.6%}
+    #user-list .display-user {border:solid 1px #CCC; float:left; width:100%; background:#DDD; border-radius:10px; box-sizing:border-box; padding:5px}
     #user-list span {display:inline-block; float:left}
-    #user-list img {width:80px}
-    #user-list p {float:left}
+    #user-list img {width:70px; border: solid 1px #BBB}
+    #user-list p {float:left; margin-left:5px}
 /*END USERS LIST*/
 
 /*END CONTENT*/
@@ -110,6 +110,7 @@ body>footer div p {color: #8b8b8b; font-size: 0.9em; font-weight: bold; float: r
 	#form>div {margin-bottom: 4%}
 	#form select {min-width: 40%}
 	#form label {float: none; display: block; text-align: left; padding: 0px}
+	#user-list ul li {float:none; overflow:auto; width:100%; margin:2% 0;}
     body>footer div {width: 96%; padding: 0 2%}
     body>footer div p {width: 60%}
 }
