--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -80,6 +80,8 @@ header {width: 100%; margin: 0 auto; background: linear-gradient(to top, #353535
 
 	div.interval {width: 96%; border-top: dotted 1px #BBB; height: 2px; margin: 1.1% auto; clear: both}
     div.clear {clear:both}
+    div#overlay {position:fixed; width:100%; height:100%; background:#000; opacity:.7; z-index:1000}
+    div#modal {position: fixed; width: 70%; height: 400px; background-color: #CCC; z-index: 1001; top: 15%; left: 15%}
 
     /*USERS LIST*/
     #user-list {margin:2% auto;}
