--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -62,8 +62,12 @@ header {width: 100%; margin: 0 auto; background: linear-gradient(to top, #353535
 	/*END HOME*/
 
 	div.button {text-align:right}
-	div.button * {padding: 7px 20px; color: #FFF; text-decoration: none; font-weight: bold; background: #fab357; border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; font-size: 0.9em; border:none; cursor:pointer; display:inline-block}
+	div.button *, .default-button {padding: 7px 20px; color: #FFF; text-decoration: none; font-weight: bold; border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; font-size: 0.9em; border:none; cursor:pointer; display:inline-block; outline: none}
+	div.button * {background: #fab357;}
 	div.button *:hover {background: #FCCB8C}
+
+    .default-button {background:#777; margin-top:10px}
+    .default-button:hover {background:#999}
 
 	textarea {resize: none; font-size: 86.7%; font-family: Helvetica Neue, Helvetica, Arial, sans-serif}
 
@@ -80,8 +84,12 @@ header {width: 100%; margin: 0 auto; background: linear-gradient(to top, #353535
 
 	div.interval {width: 96%; border-top: dotted 1px #BBB; height: 2px; margin: 1.1% auto; clear: both}
     div.clear {clear:both}
-    div#overlay {position:fixed; width:100%; height:100%; background:#000; opacity:.7; z-index:1000}
-    div#modal {position: fixed; width: 70%; height: 400px; background-color: #CCC; z-index: 1001; top: 15%; left: 15%}
+
+    /*BASIC MODAL*/
+    div#super-overlay, div#modal {display:none}
+    div#super-overlay {position:fixed; width:100%; height:100%; background:#000; opacity:.8; z-index:1000}
+    div#modal {position: absolute; overflow:hidden; width: 70%; background-color: #CCC; z-index: 1001; top: 5%; left: 15%; border-radius:10px; text-align:center; padding:10px; box-sizing:border-box}
+    /*END BASIC MODAL*/
 
     /*USERS LIST*/
     #user-list {margin:2% auto;}
@@ -96,6 +104,7 @@ header {width: 100%; margin: 0 auto; background: linear-gradient(to top, #353535
 
     /*VIEW USER*/
     #user-view {margin:2% auto}
+    #user-view .user-image {display:inline-block;}
     #user-view .user-image img {border:solid 1px #BBB}
     #user-view .user-image, #user-view .information {float:left}
     #user-view .information {margin-left:10px}
@@ -114,74 +123,3 @@ body>footer div {width: 70%; margin: 0 auto}
 body>footer div h1 {color: #8b8b8b; text-transform: uppercase; font-weight: bold; margin-bottom: 6px}
 body>footer div p {color: #8b8b8b; font-size: 0.9em; font-weight: bold; float: right; text-align: right; line-height: 15px}
 /*END FOOTER*/
-
-/*FOR SMARTPHONES*/
-@media only screen and (min-width:150px) and (max-width:600px) {
-	/*HEADER*/
-	header {background: none}
-	#top-header {width: 96%; padding: 13px 2%; background: linear-gradient(to top, #353535, #777); background: -moz-linear-gradient(to top, #353535, #777); background: -ms-linear-gradient(to top, #353535, #777)}
-	#top-header p {display: none}
-	/*END HEADER*/
-
-	/*MENU*/
-	nav ul {width: 96%; padding: 0 2%}
-	nav ul li {float:none}
-	nav ul li a {display:block; text-align:center; height:10px; line-height: 8px}
-    nav ul li a:hover, nav.category .categories, nav.user .users, nav.complaint .complaints, nav.home .home, nav.about .about {background:#AAA; border-radius:4px; -moz-border-radius: 4px; -webkit-border-radius: 4px}
-	/*END MENU*/
-
-    /*FLASH MESSAGES*/
-    .message {width:96%; padding:.2% 2%; line-height: 25px;  margin:0 auto 1.4%;}
-    .message p {line-height: 27px}
-    .message .close-message {display:block}
-    /*END FLASH MESSAGES*/
-
-	/*CONTENT*/
-	#main-content {width: 96%}
-    #content {min-height: initial}
-	#content article {padding: 4%}
-	#content article p {text-align: justify}
-	#content article footer {margin: 4% 0}
-
-	.images {float: none; width: 90%; margin-bottom: 4%}
-
-	div.button {float: none; margin: 20px 0}
-
-	#form>div input,#form>div textarea {width: 90%}
-	#form>div {margin-bottom: 4%}
-	#form select {min-width: 40%}
-	#form label {float: none; display: block; text-align: left; padding: 0px}
-
-    #user-list {margin:8% auto;}
-    #user-list ul li {float:none; overflow:auto; width:100%; margin:4% 0}
-    #user-list .display-user img {width:60px}
-    #user-list .display-user .details {width:70%}
-
-    #user-view {margin:4% auto}
-    #user-view .user-image, #user-view .information {float:none}
-    #user-view .information {margin:4% 0 0 0}
-	/*END CONTENT*/
-
-	/*FOOTER*/
-    body>footer div {width: 96%; padding: 0 2%}
-    body>footer div p {width: 60%}
-    /*END FOOTER*/
-}
-
-/*FOR TABLETS*/
-@media only screen and (min-width:600px) and (max-width:1000px) {
-	#top-header,#main-content,nav ul, .message, body>footer div {width: 90%}
-    div.button {margin-bottom: 3%}
-	#form>div input,#form>div textarea {width: 50%}
-
-	#user-list {margin:2% auto;}
-    #user-list ul li {width:45%; margin:1% 2.5%}
-    #user-list .display-user img {width:50px;}
-    #user-list .display-user .details {width:70%;}
-    #user-list .display-user a {font-size:.9em;}
-}
-
-/*FOR HIGHER RESOLUTIONS*/
-@media only screen and (min-width:1600px) {
-	#top-header,#main-content, nav ul, .message, body>footer div {width: 55%}
-}
