--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -97,13 +97,13 @@ header {width: 100%; margin: 0 auto; background: linear-gradient(to top, #353535
     #basic-list .display-item {border:solid 1px #CCC; float:left; width:100%; background:linear-gradient(to top, #EEE, #FFF); border-radius:7px; box-sizing:border-box; padding:3px; position: relative}
     #basic-list .display-item img {width:70px; border: solid 1px #BBB; float:left}
     #basic-list .display-item .details {width:calc(100% - 80px); float:left; margin-left:5px}
-    #basic-list .display-item > a {display:block; color:#888; font-weight:bold; text-decoration:none}
-    #basic-list .display-item > a:hover {text-decoration:underline}
+    #basic-list .display-item a {color:#888; font-weight:bold; text-decoration:none}
+    #basic-list .display-item a:hover {text-decoration:underline}
     #basic-list .display-item footer {font-size: .8em; margin:4% 0}
 
-    #basic-list .display-item .dropdown {position:absolute; right:5px; top: 5px}
-    #basic-list .display-item .options {position:absolute; right:5px; top: 15px; background:#FFF; border:solid 1px #CCC; border-radius:3px}
-    #basic-list .display-item .options a {padding:5px 10px; display:block; font-size:.9em; color:#666; text-decoration: none}
+    #basic-list .display-item .dropdown {display:inline-block; cursor: pointer; height:12px; width:12px; background:url('../img/arrow-down.png') center center no-repeat; position:absolute; right:5px; top: 5px}
+    #basic-list .display-item .options {display:none; position:absolute; right:5px; top: 22px; background:#FFF; border:solid 1px #CCC; border-radius:3px}
+    #basic-list .display-item .options a {padding:5px 10px; display:block; font-size:.8em; color:#666; text-decoration: none; font-weight:normal}
     #basic-list .display-item .options a:hover {background:#F7F7F7}
 	/*END BASIC LIST*/
 
