--- a/webroot/css/media-queries.css
+++ b/webroot/css/media-queries.css
@@ -38,7 +38,7 @@
     #form label {float: none; display: block; text-align: left; padding: 0px}
 
     #basic-list {margin:8% auto;}
-    #basic-list ul li {float:none; overflow:auto; width:100%; margin:4% 0}
+    #basic-list ul li {float:none; width:100%; margin:4% 0}
     #basic-list .display-item img {width:60px}
 
     #content .paginator p.pagination-info {margin-top:4%}
@@ -60,7 +60,6 @@
 @media only screen and (min-width:600px) and (max-width:1000px) {
     #top-header,#main-content,nav ul, .message, body>footer div, div#modal {width: 90%}
     div#modal {left:5%}
-    div.button {margin-bottom: 3%}
     #form>div input,#form>div textarea {width: 50%}
 
     #basic-list {margin:2% auto;}
