--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -77,11 +77,12 @@ header {width: 100%; margin: 0 auto; background: linear-gradient(to top, #353535
 	#form {width: 100%; margin-top: 3%}
 	#form label {float: left; width: 30%; text-align: right; padding: 3px 10px 0; text-transform: uppercase; font-size: 0.9em; color: #888; font-weight: bold; line-height:25px}
 	/*#form label:after {content: "*"; font-size: 18px; margin-left: 3px; color: #FE0000}*/
-	#form>div {margin: 2% 0}
-	#form>div input,#form>div textarea {width: 45%; padding: 2px; border:solid 1px #BBB}
-	#form>div input {height: 25px}
-	#form>div select {width: 25%; height: 31px}
-	#form>div textarea {height: 100px}
+	#form > div {margin: 2% 0}
+	#form input, #form textarea {width: 45%; padding: 2px; border:solid 1px #BBB}
+	#form input[type="checkbox"] {width:initial; height:initial; padding:0; margin:7px 0 0 0}
+	#form input {height: 25px}
+	#form select {width: 25%; height: 31px}
+	#form textarea {height: 100px}
 	/*END FORMS*/
 
 	div.interval {width: 96%; border-top: dotted 1px #BBB; height: 2px; margin: 1.1% auto; clear: both}
@@ -118,16 +119,17 @@ header {width: 100%; margin: 0 auto; background: linear-gradient(to top, #353535
 
 	#view-complaints li div.complaint-details {float:left; max-width:70%}
 	#view-complaints li div.complaint-user-details {float:right; text-align:right}
+	#view-complaints li div.complaint-user-details h2 {font-style:italic; color:#f29113}
 	#view-complaints li div.fulfill-line {overflow:hidden; padding:0 7px}
 	#view-complaints li div.fulfill-line span {display:block; border-top:solid 1px #DDD; margin-top:3px}
 
-	#view-complaints li div.container {float:left; width:calc(100% - 47px)}
+	#view-complaints li div.container {float:left; width:calc(100% - 50px)}
 	#view-complaints li div.container footer {font-size:.8em; margin:5px 0}
 	#view-complaints li div.container footer.category {float:left}
 	#view-complaints li div.container footer.created {float:right}
 
 	#view-complaints li div.image {float:right; margin-left:7px}
-	#view-complaints li div.image img {width:40px; float:right}
+	#view-complaints li div.image img {width:40px; border:solid 1px #DDD}
 	/*END COMPLAINTS LIST*/
 
     /*PAGINATION*/
