--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -2,9 +2,12 @@
 
 body {width: 100%; font-size: 86.7%; clear: both; font-family: Helvetica Neue, Helvetica, Arial, sans-serif; background: #DDD}
 
+ /*DEFAULT PAGE WIDTH*/
+ #top-header,#main-content, nav ul, .message, body>footer div, div#modal {width: 77%}
+
 /*HEADER*/
 header {width: 100%; margin: 0 auto; background: linear-gradient(to top, #353535, #777); background: -moz-linear-gradient(to top, #353535, #777); background: -ms-linear-gradient(to top, #353535, #777)}
-#top-header {width: 70%; margin: 0 auto; color: #FFF; padding: 13px 0}
+#top-header {margin: 0 auto; color: #FFF; padding: 13px 0}
 #top-header h1 {font-size: 1.5em; color: #fab357; font-weight: bold; margin-bottom: 5px; text-shadow: 1px 1px 2px #222}
 #top-header p {font-size: 0.9em; color: #fab357; float: right; font-weight: bold; width: 200px; text-align: right; line-height: 15px}
 
@@ -18,7 +21,7 @@ header {width: 100%; margin: 0 auto; background: linear-gradient(to top, #353535
 
 	/*MENU*/
 	nav {width: 100%; background: #595959; overflow: auto; border-top: solid 2px #444; margin-bottom: 1.5%}
-	nav ul {width: 70%; margin: 0 auto}
+	nav ul {margin: 0 auto}
 	nav ul li {float: left; display: block}
 	nav ul li a {display: inline-block; height: 20px; padding: 10px 25px; text-decoration: none; font-size: 0.95em; border-top:solid 2px #595959}
 	nav>ul>li>a,nav>ul>li>a:hover,nav>ul>li>a:link,nav>ul>li>a:visited,nav>ul>li>a:active {color: #FFF}
@@ -28,7 +31,7 @@ header {width: 100%; margin: 0 auto; background: linear-gradient(to top, #353535
 /*END HEADER*/
 
 /*FLASH MESSAGES*/
-.message {width:70%; margin:0 auto .7%; padding:.2% .5%; overflow:auto; vertical-align:center; border-radius:7px; -moz-border-radius:7px; -webkit-border-radius:7px; box-sizing:border-box; position:relative }
+.message {margin:0 auto .7%; padding:.2% .5%; overflow:auto; vertical-align:center; border-radius:7px; -moz-border-radius:7px; -webkit-border-radius:7px; box-sizing:border-box; position:relative }
 .message span {float:left; height:31px; width:31px; margin-right:5px}
 .message p {line-height:35px; font-size:1.1em}
 .message .close-message {position:absolute; top:0; right:0; border-radius:4px; border:none; color:#FFF; cursor:pointer; outline:none; display:none}
@@ -47,7 +50,7 @@ header {width: 100%; margin: 0 auto; background: linear-gradient(to top, #353535
 /*FLASH MESSAGES*/
 
 /*CONTENT*/
-	#main-content {width: 70%; margin: 0 auto}
+	#main-content {margin: 0 auto}
 	#content {width: 100%; float: left; min-height: 700px; background: #FFF; border-radius: 7px; -moz-border-radius: 7px; -webkit-border-radius: 7px; box-shadow: 2px 3px 3px #AAA}
 	#content article {padding: 2.3%; overflow: auto}
 	#content article h1 {font-size: 1.2em; color: #f29113; text-transform: uppercase; font-weight: bold; display: inline-block; word-break:break-all}
@@ -60,7 +63,7 @@ header {width: 100%; margin: 0 auto; background: linear-gradient(to top, #353535
 	.images {float: left; width: 30%}
 	.images span {display: block; margin-top: 10px; color: #888; text-transform: uppercase; font-weight: bold}
 	.images div {margin-right: 5%; background: #F1F1F1}
-	.images img {width: 90%; height: auto; margin: 0 1.5%; opacity: 0.77}
+	.images img {width: 90%; height: auto; margin: 0 1.5%; opacity:.77}
 	/*END HOME*/
 
 	div.button {float:right}
@@ -91,7 +94,7 @@ header {width: 100%; margin: 0 auto; background: linear-gradient(to top, #353535
     /*BASIC MODAL*/
     div#super-overlay, div#modal {display:none}
     div#super-overlay {position:fixed; width:100%; height:100%; background:#000; opacity:.8; z-index:1000}
-    div#modal {position: absolute; overflow:hidden; width: 70%; background-color: #CCC; z-index: 1001; top: 5%; left: 15%; border-radius:10px; text-align:center; padding:10px; box-sizing:border-box}
+    div#modal {position: absolute; overflow:hidden; background-color: #CCC; z-index: 1001; top: 5%; left: 11.5%; border-radius:10px; text-align:center; padding:10px; box-sizing:border-box}
     /*END BASIC MODAL*/
 
     /*BASIC LIST*/
@@ -111,26 +114,34 @@ header {width: 100%; margin: 0 auto; background: linear-gradient(to top, #353535
 	/*END BASIC LIST*/
 
 	/*COMPLAINTS LIST*/
-	#view-complaints {margin:2% 0}
-	#view-complaints li {padding:20px 10px; overflow: auto}
-	#view-complaints li:nth-child(2n) {background:#F7F7F7}
-	#view-complaints li div a {color:#333; font-weight:normal; text-decoration: none; overflow: hidden; text-overflow:ellipsis; white-space: nowrap; display: block; padding-bottom: 2px}
-	#view-complaints li div a:hover {text-decoration:underline}
+	#complaints-list {margin:2% 0}
+	#complaints-list li {padding:20px 10px; overflow: auto}
+	#complaints-list li:nth-child(2n) {background:#F7F7F7}
+	#complaints-list li div a {color:#444; font-weight:normal; text-decoration: none; overflow: hidden; text-overflow:ellipsis; white-space: nowrap; display: block; padding-bottom: 2px}
+	#complaints-list li div a:hover {text-decoration:underline}
 
-	#view-complaints li div.complaint-details {float:left; max-width:70%}
-	#view-complaints li div.complaint-user-details {float:right; text-align:right}
-	#view-complaints li div.complaint-user-details h2 {font-style:italic; color:#f29113}
-	#view-complaints li div.fulfill-line {overflow:hidden; padding:0 7px}
-	#view-complaints li div.fulfill-line span {display:block; border-top:solid 1px #DDD; margin-top:3px}
+	#complaints-list li div.complaint-details {float:left; max-width:70%}
+	#complaints-list li div.complaint-user-details {float:right; text-align:right}
+	#complaints-list li div.complaint-user-details h2 {font-style:italic; color:#f29113}
+	#complaints-list li div.fulfill-line {overflow:hidden; padding:0 7px}
+	#complaints-list li div.fulfill-line span {display:block; border-top:solid 1px #DDD; margin-top:3px}
 
-	#view-complaints li div.container {float:left; width:calc(100% - 50px)}
-	#view-complaints li div.container footer {font-size:.8em; margin:5px 0}
-	#view-complaints li div.container footer.category {float:left}
-	#view-complaints li div.container footer.created {float:right}
+	#complaints-list li div.container {float:left; width:calc(100% - 50px)}
+	#complaints-list li div.container footer {font-size:.8em; margin:5px 0}
+	#complaints-list li div.container footer.category {float:left}
+	#complaints-list li div.container footer.created {float:right}
 
-	#view-complaints li div.image {float:right; margin-left:7px}
-	#view-complaints li div.image img {width:40px; border:solid 1px #DDD}
+	#complaints-list li div.image {float:right; margin-left:7px}
+	#complaints-list li div.image img {width:40px; border:solid 1px #DDD}
 	/*END COMPLAINTS LIST*/
+
+	/*VIEW COMPLAINT*/
+	#view-complaint > div {float:left;}
+	#view-complaint img {width:50px; height:auto; border:solid 1px #DDD}
+	#view-complaint .complaint-details {margin-left:10px}
+	#view-complaint .complaint-details .date {display:inline-block; color: #777; margin-left:15px}
+	#view-complaint .complaint-details p {margin-top:.5%}
+	/*END VIEW COMPLAINT*/
 
     /*PAGINATION*/
     .paginator {clear:both; text-align:center}
@@ -164,7 +175,7 @@ header {width: 100%; margin: 0 auto; background: linear-gradient(to top, #353535
 
 /*FOOTER*/
 body>footer {width: 100%; height: 80px; background: linear-gradient(to bottom, #353535, #777); float: left; margin-top: 1.5%; border-top: solid 2px #2A2A2A; padding-top: 12px}
-body>footer div {width: 70%; margin: 0 auto}
+body>footer div {margin: 0 auto}
 body>footer div h1 {color: #8b8b8b; text-transform: uppercase; font-weight: bold; margin-bottom: 6px}
 body>footer div p {color: #8b8b8b; font-size: 0.9em; font-weight: bold; float: right; text-align: right; line-height: 15px}
 /*END FOOTER*/
