--- a/webroot/css/media-queries.css
+++ b/webroot/css/media-queries.css
@@ -62,7 +62,9 @@
 
 /*FOR TABLETS*/
 @media only screen and (min-width:600px) and (max-width:1000px) {
+     /*DEFAULT PAGE WIDTH*/
     #top-header,#main-content,nav ul, .message, body>footer div, div#modal {width: 90%}
+
     div#modal {left:5%}
     #form>div input,#form>div textarea {width: 50%}
 
